--- a/gold-zip-input.html
+++ b/gold-zip-input.html
@@ -62,13 +62,13 @@ style this element.
         auto-validate="[[autoValidate]]"
         attr-for-value="bind-value">
 
-      <template is="dom-if" if="[[label]]">
-        <label>[[label]]</label>
-      </template>
+      <label hidden$="[[!label]]">[[label]]</label>
 
       <zip-validator></zip-validator>
 
       <input is="iron-input" id="input"
+          aria-labelledby$="[[_ariaLabelledBy]]"
+          aria-describedby$="[[_ariaDescribedBy]]"
           required$="[[required]]"
           validator="zip-validator"
           type="tel"
