--- a/gold-zip-input.html
+++ b/gold-zip-input.html
@@ -51,8 +51,7 @@ style this element.
 <dom-module id="gold-zip-input">
   <style>
   :host {
-    display: inline-block;
-    white-space: nowrap;
+    display: block;
   }
   </style>
 
