--- a/demo/index.html
+++ b/demo/index.html
@@ -18,35 +18,37 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <title>gold-zip-input demo</title>
 
   <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
-
   <link rel="import" href="../gold-zip-input.html">
 
-  <link rel="stylesheet" href="../../paper-styles/demo.css">
-
+  <link rel="stylesheet" href="../../paper-styles/paper-styles.html">
+  <link rel="import" href="../../paper-styles/demo-pages.html">
 </head>
 <style>
   gold-zip-input {
     width: 200px;
+    margin-left: auto;
+    margin-right: auto;
   }
-
 </style>
 <body>
-  <section>
-    <gold-zip-input></gold-zip-input>
-  </section>
 
-  <section>
-    <h4>Auto-validating input</h4>
-    <gold-zip-input auto-validate></gold-zip-input>
-    <br>
-    <gold-zip-input auto-validate value="90210"></gold-zip-input>
-    <br>
-    <gold-zip-input auto-validate value="90210-9999"></gold-zip-input>
-    <br>
-    <gold-zip-input auto-validate value="123"></gold-zip-input>
+  <div class="vertical-section-container centered">
+    <h4>Standard</h4>
+    <div class="vertical-section">
+      <gold-zip-input></gold-zip-input>
+      <gold-zip-input label="Auto-validating" auto-validate></gold-zip-input>
+    </div>
 
-    <h4>With custom error message</h4>
-    <gold-zip-input required auto-validate error-message="Please enter a valid US zip code" label="Zippety Zip"></gold-zip-input>
-  </section>
+    <h4>Pre-validated</h4>
+    <div class="vertical-section">
+      <gold-zip-input auto-validate value="90210"></gold-zip-input>
+      <gold-zip-input auto-validate value="90210-9999"></gold-zip-input>
+      <gold-zip-input auto-validate value="123"></gold-zip-input>
+    </div>
 
+    <h4>Custom error message</h4>
+    <div class="vertical-section">
+      <gold-zip-input required auto-validate error-message="Please enter a valid US zip code" label="Zippety Zip"></gold-zip-input>
+    </div>
+  </div>
 </body>
