add autocomplete field

--- a/gold-zip-input.html
+++ b/gold-zip-input.html
@@ -73,7 +73,7 @@ style this element.
           type="tel"
           maxlength="10"
           bind-value="{{value}}"
-          autocomplete$="[[autocomplete]]"
+          autocomplete="postal-code"
           name$="[[name]]">
 
       <template is="dom-if" if="[[errorMessage]]">
