--- a/gold-zip-input.html
+++ b/gold-zip-input.html
@@ -75,6 +75,8 @@ style this element.
           required$="[[required]]"
           validator="zip-validator"
           type="tel"
+          allowed-pattern="[0-9\-]"
+          prevent-invalid-input
           maxlength="10"
           bind-value="{{value}}"
           autocomplete="postal-code"
@@ -114,6 +116,31 @@ style this element.
       label: {
         type: String,
         value: "Zip Code"
+      }
+    },
+
+    observers: [
+      '_computeValue(value)'
+    ],
+
+    _computeValue: function(value) {
+      var start = this.$.input.selectionStart;
+      var previousCharADash = this.value.charAt(start - 1) == '-';
+
+      // Remove any already-applied formatting.
+      value = value.replace(/-/g, '');
+
+      // Add a dash after the 5th character
+      if (value.length > 5) {
+        value = value.substr(0,5) + '-' + value.substr(5)
+      }
+      this.updateValueAndPreserveCaret(value.trim());
+
+      // If the character right before the selection is a newly inserted
+      // dash, we need to advance the selection to maintain the caret position.
+      if (!previousCharADash && this.value.charAt(start - 1) == '-') {
+        this.$.input.selectionStart = start + 1;
+        this.$.input.selectionEnd = start + 1;
       }
     }
 
