--- a/gold-zip-input.html
+++ b/gold-zip-input.html
@@ -125,7 +125,7 @@ style this element.
           var previousCharADash = this.value ? this.value.charAt(start - 1) == '-' : false;
 
           // Remove any already-applied formatting.
-          value = value.replace(/-/g, '');
+          value = value ? value.replace(/-/g, '') : '';
 
           // Add a dash after the 5th character
           if (value.length > 5) {
