--- a/gold-zip-input.html
+++ b/gold-zip-input.html
@@ -121,11 +121,12 @@ style this element.
         ],
 
         _computeValue: function(value) {
+          value = String(value);
           var start = this.$.input.selectionStart;
-          var previousCharADash = this.value ? this.value.charAt(start - 1) == '-' : false;
+          var previousCharADash = this.value.charAt(start - 1) === '-';
 
           // Remove any already-applied formatting.
-          value = value ? value.replace(/-/g, '') : '';
+          value = value.replace(/-/g, '');
 
           // Add a dash after the 5th character
           if (value.length > 5) {
@@ -135,7 +136,7 @@ style this element.
 
           // If the character right before the selection is a newly inserted
           // dash, we need to advance the selection to maintain the caret position.
-          if (!previousCharADash && this.value.charAt(start - 1) == '-') {
+          if (!previousCharADash && this.value.charAt(start - 1) === '-') {
             this.$.input.selectionStart = start + 1;
             this.$.input.selectionEnd = start + 1;
           }
