Fix: missing change event trigger

--- a/gold-zip-input.html
+++ b/gold-zip-input.html
@@ -86,7 +86,8 @@ style this element.
           inputmode$="[[inputmode]]"
           placeholder$="[[placeholder]]"
           readonly$="[[readonly]]"
-          size$="[[size]]">
+          size$="[[size]]"
+          on-change="_onChange">
 
       <template is="dom-if" if="[[errorMessage]]">
         <paper-input-error id="error">[[errorMessage]]</paper-input-error>
