Fix: user input does not fire change event

--- a/gold-zip-input.html
+++ b/gold-zip-input.html
@@ -130,7 +130,8 @@ style this element.
           inputmode$="[[inputmode]]"
           placeholder$="[[placeholder]]"
           readonly$="[[readonly]]"
-          size$="[[size]]">
+          size$="[[size]]"
+          on-change="_onChange">
   </template>
 
   <template id="v1">
@@ -152,7 +153,8 @@ style this element.
           inputmode$="[[inputmode]]"
           placeholder$="[[placeholder]]"
           readonly$="[[readonly]]"
-          size$="[[size]]">
+          size$="[[size]]"
+          on-change="_onChange">
     </iron-input>
   </template>
 
