Fix TypeScript compilation of gold-zip-input

--- a/gold-zip-input.html
+++ b/gold-zip-input.html
@@ -177,6 +177,11 @@ style this element.
           label: {
             type: String,
             value: "Zip Code"
+          },
+
+          value: {
+            // Required for the correct TypeScript type-generation
+            type: String
           }
 
         },
