--- a/demo/index.html
+++ b/demo/index.html
@@ -10,16 +10,17 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 -->
 <html>
 <head>
-
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1, user-scalable=yes">
 
   <title>gold-zip-input demo</title>
 
-  <script src="../../../@webcomponents/webcomponentsjs/webcomponents-bundle.js"></script>
-  <script type="module" src="../gold-zip-input.js"></script>
-  <script type="module" src="../../paper-styles/demo-pages.js"></script>
+  <script src="https://unpkg.com/@webcomponents/webcomponentsjs@^2.0.0/webcomponents-loader.js"></script>
+  <script type="module">
+    import '@polymer/paper-styles/demo-pages.js';
+    import '../gold-zip-input.js';
+  </script>
 </head>
 <style>
   gold-zip-input {
@@ -29,7 +30,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   }
 </style>
 <body unresolved>
-
   <div class="vertical-section-container centered">
     <h4>Standard</h4>
     <div class="vertical-section">
